--- a/Experiments/server/package.json
+++ b/Experiments/server/package.json
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.0",
+    "@jupyterlab/apputils": "^2.2.5",
     "@jupyterlab/coreutils": "^4.0.0",
     "@jupyterlab/filebrowser": "^2.2.4",
     "@jupyterlab/services": "^5.0.0",
-    "@lumino/widgets": "^1.14.0"
+    "@lumino/widgets": "^1.14.0",
+    "event-source-polyfill": "^1.0.20"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.25.0",
