--- a/Experiments/notebook-download-button/package.json
+++ b/Experiments/notebook-download-button/package.json
@@ -41,8 +41,10 @@
   "dependencies": {
     "@jupyterlab/application": "^2.0.0",
     "@jupyterlab/coreutils": "^4.0.0",
+    "@jupyterlab/mainmenu": "^2.2.3",
     "@jupyterlab/notebook": "^2.2.6",
-    "@jupyterlab/services": "^5.0.0"
+    "@jupyterlab/services": "^5.0.0",
+    "@jupyterlab/statedb": "^2.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.25.0",
