Restart from cookiecutter

--- a/experiments/20210321/jupyter-config/crosscompute_jupyterlab_extensions.json
+++ b/experiments/20210321/jupyter-config/crosscompute_jupyterlab_extensions.json
@@ -1,6 +1,6 @@
 {
-  "ServerApp": {
-    "jpserver_extensions": {
+  "NotebookApp": {
+    "nbserver_extensions": {
       "crosscompute_jupyterlab_extensions": true
     }
   }
