--- a/experiments/20210321/MANIFEST.in
+++ b/experiments/20210321/MANIFEST.in
@@ -1,14 +1,12 @@
 include LICENSE
 include README.md
 include pyproject.toml
+
 include jupyter-config/crosscompute_jupyterlab_extensions.json
 
 include package.json
-include install.json
 include ts*.json
-include yarn.lock
-
-graft crosscompute_jupyterlab_extensions/labextension
+include crosscompute_jupyterlab_extensions/labextension/*.tgz
 
 # Javascript files
 graft src
