--- a/package.json
+++ b/package.json
@@ -12,63 +12,75 @@
     "url": "https://github.com/crosscompute/crosscompute-jupyterlab-extensions/issues"
   },
   "license": "BSD-3-Clause",
-  "author": "CrossCompute Inc.",
+  "author": {
+    "name": "CrossCompute Inc.",
+    "email": "support@crosscompute.com"
+  },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
+    "style/**/*.{css,.js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "style": "style/index.css",
   "repository": {
     "type": "git",
-    "url": "https://github.com/crosscompute/crosscompute-jupyterlab-extensions"
+    "url": "https://github.com/crosscompute/crosscompute-jupyterlab-extensions.git"
   },
   "scripts": {
-    "build": "jlpm run build:lib",
-    "build:labextension": "cd crosscompute_jupyterlab_extensions && rimraf labextension && mkdirp labextension && cd labextension && npm pack ../..",
+    "build": "jlpm run build:lib && jlpm run build:labextension:dev",
+    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
+    "build:labextension": "jupyter labextension build .",
+    "build:labextension:dev": "jupyter labextension build --development True .",
     "build:lib": "tsc",
-    "build:all": "jlpm run build:labextension",
     "clean": "jlpm run clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:labextension": "rimraf crosscompute_jupyterlab_extensions/labextension",
     "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
     "eslint": "eslint . --ext .ts,.tsx --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
-    "prepare": "jlpm run clean && jlpm run build",
-    "watch": "tsc -w"
+    "install:extension": "jupyter labextension develop --overwrite .",
+    "prepare": "jlpm run clean && jlpm run build:prod",
+    "watch": "run-p watch:src watch:labextension",
+    "watch:src": "tsc -w",
+    "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0",
-    "@jupyterlab/coreutils": "^4.0.0",
-    "@jupyterlab/notebook": "^2.2.6",
-    "@jupyterlab/services": "^5.0.0"
+    "@jupyterlab/application": "^3.0.0",
+    "@jupyterlab/coreutils": "^5.0.0",
+    "@jupyterlab/services": "^6.0.0"
+
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "mkdirp": "^1.0.3",
-    "prettier": "1.16.4",
-    "rimraf": "^2.6.1",
-    "typescript": "~3.7.0"
+    "@jupyterlab/builder": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4", 
+    "mkdirp": "^1.0.3", 
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.1",
+    "rimraf": "^3.0.2",
+    "typescript": "~4.1.3"
   },
   "sideEffects": [
-    "style/*.css"
+    "style/*.css",
+    "style/index.js"
   ],
-  "jupyterlab": {
+  "styleModule": "style/index.js",
+  "jupyterlab": { 
     "discovery": {
-      "server": {
-        "managers": [
-          "pip"
-        ],
-        "base": {
-          "name": "crosscompute_jupyterlab_extensions"
+        "server": {
+          "managers": [
+            "pip"
+          ],
+          "base": {
+            "name": "crosscompute_jupyterlab_extensions"
+          }
         }
-      }
-    },
-    "extension": true
+    }, 
+    "extension": true,
+    "outputDir": "crosscompute_jupyterlab_extensions/labextension"
   }
 }
