--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   "dependencies": {
     "@jupyterlab/application": "^3.0.0",
     "@jupyterlab/coreutils": "^5.0.0",
+    "@jupyterlab/notebook": "^3.0.7",
     "@jupyterlab/services": "^6.0.0"
-
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
@@ -57,8 +57,8 @@
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4", 
-    "mkdirp": "^1.0.3", 
+    "eslint-plugin-prettier": "^3.1.4",
+    "mkdirp": "^1.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
@@ -69,17 +69,17 @@
     "style/index.js"
   ],
   "styleModule": "style/index.js",
-  "jupyterlab": { 
+  "jupyterlab": {
     "discovery": {
-        "server": {
-          "managers": [
-            "pip"
-          ],
-          "base": {
-            "name": "crosscompute_jupyterlab_extensions"
-          }
+      "server": {
+        "managers": [
+          "pip"
+        ],
+        "base": {
+          "name": "crosscompute-jupyterlab-extensions"
         }
-    }, 
+      }
+    },
     "extension": true,
     "outputDir": "crosscompute_jupyterlab_extensions/labextension"
   }
