Add commands to command palette

--- a/jupyterlab_crosscompute/package.json
+++ b/jupyterlab_crosscompute/package.json
@@ -80,7 +80,7 @@
             "pip"
           ],
           "base": {
-            "name": "jupyterlab_crosscompute"
+            "name": "jupyterlab-crosscompute"
           }
         }
     },
