--- a/jupyterlab_crosscompute/package.json
+++ b/jupyterlab_crosscompute/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyterlab-crosscompute",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "CrossCompute Extensions for JupyterLab",
   "keywords": [
     "jupyter",
@@ -47,10 +47,9 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^3.1.0",
-    "@jupyterlab/settingregistry": "^3.1.0",
     "@jupyterlab/coreutils": "^5.1.0",
-    "@jupyterlab/services": "^6.1.0"
-
+    "@jupyterlab/services": "^6.1.0",
+    "@jupyterlab/settingregistry": "^3.1.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.1.0",
@@ -73,16 +72,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "jupyterlab": { 
+  "jupyterlab": {
     "discovery": {
-        "server": {
-          "managers": [
-            "pip"
-          ],
-          "base": {
-            "name": "jupyterlab_crosscompute"
-          }
+      "server": {
+        "managers": [
+          "pip"
+        ],
+        "base": {
+          "name": "jupyterlab-crosscompute"
         }
+      }
     },
     "extension": true,
     "outputDir": "jupyterlab_crosscompute/labextension",
