--- a/jupyterlab_crosscompute/package.json
+++ b/jupyterlab_crosscompute/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@jupyterlab/application": "^3.1.0",
     "@jupyterlab/coreutils": "^5.1.0",
+    "@jupyterlab/filebrowser": "^3.2.9",
     "@jupyterlab/services": "^6.1.0",
     "@jupyterlab/settingregistry": "^3.1.0"
   },
