--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,14 @@ package-lock.json
 *.bundle.*
 lib/
 node_modules/
+*.log
+.eslintcache
+.stylelintcache
 *.egg-info/
 .ipynb_checkpoints
 *.tsbuildinfo
 jupyterlab_crosscompute/labextension
+jupyterlab_crosscompute/_version.py
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
@@ -115,3 +119,6 @@ dmypy.json
 # vim
 *.sw[op]
 *~
+
+# Yarn cache
+.yarn/
