--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true,
-    "target": "es2018",
-    "types": []
+    "target": "ES2018",
+    "types": ["jest"]
   },
   "include": ["src/*"]
 }
