Use canonical name

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,4 +1,4 @@
-# a mybinder.org-ready environment for demoing jupyterlab_crosscompute
+# a mybinder.org-ready environment for demoing jupyterlab-crosscompute
 # this environment may also be used locally on Linux/MacOS/Windows, e.g.
 #
 #   conda env update --file binder/environment.yml
