--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^4.0.0",
-    "@jupyterlab/settingregistry": "^4.0.0",
     "@jupyterlab/coreutils": "^6.0.0",
-    "@jupyterlab/services": "^7.0.0"
+    "@jupyterlab/services": "^7.0.0",
+    "@jupyterlab/settingregistry": "^4.0.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^4.0.0",
@@ -106,7 +106,7 @@
           "pip"
         ],
         "base": {
-          "name": "jupyterlab_crosscompute"
+          "name": "jupyterlab-crosscompute"
         }
       }
     },
